--- a/paper/conclusion.tex
+++ b/paper/conclusion.tex
@@ -3,42 +3,61 @@
 We found that old groups of K dwarfs selected to be coeval using the
 \citet{angus2019} gyrochronology relation do {\it not} have the same velocity
 dispersion across all temperatures.
-This indicates that either the \citep{angus2019} period-color relation is
-wrong, or that mass-dependent dynamical heating is affecting this data set.
-We presented three pieces of evidence that suggest mass-dependent heating
-cannot be responsible for all of the increasing velocity dispersion.
+% This indicates that either the \citep{angus2019} period-color relation is
+% incorrect, or that mass-dependent dynamical heating is affecting this data set.
+% We presented three pieces of evidence that suggest mass-dependent heating
+% cannot be responsible for all of the increasing velocity dispersion.
 
-\begin{itemize}
+% \begin{itemize}
 
-\item{
-        No strong evidence for mass-dependent heating has been found among M, L
-and T-type stars.
-These low-mass stars live longer than the current age of the Universe and
-        therefore do not suffer from a mass-age degeneracy
-        \citep{faherty2009}.
-}
+% \item{
+%         No strong evidence for mass-dependent heating has been found among M, L
+% and T-type stars.
+% These low-mass stars live longer than the current age of the Universe and
+%         therefore do not suffer from a mass-age degeneracy
+%         \citep{faherty2009}.
+% }
 
-\item{
-        Literature measurements of the (\vz) AVR exponent are slightly higher
-than the value measured from our data set, but calculated using more massive
-stars.
-Mass-dependent dynamical heating should however produce a {\it smaller} AVR
-        exponent for higher-mass stars.
-We acknowledge that the stars in the \mct\ sample, analyzed in this work, are
-        subject to different selection biases than those used to calculate
-        AVRs in the literature \citep{holmberg2009, aumer2009, yu2018}, so
-        drawing direct comparisons between them does not provide a reliable
-        test.
-}
+% \item{
+%         Literature measurements of the (\vz) AVR exponent are slightly higher
+% than the value measured from our data set, but calculated using more massive
+% stars.
+% Mass-dependent dynamical heating should however produce a {\it smaller} AVR
+%         exponent for higher-mass stars.
+% We acknowledge that the stars in the \mct\ sample, analyzed in this work, are
+%         subject to different selection biases than those used to calculate
+%         AVRs in the literature \citep{holmberg2009, aumer2009, yu2018}, so
+%         drawing direct comparisons between them does not provide a reliable
+%         test.
+% }
 
-\item{
-        The differences in the (\vb) AVR exponent between the hottest and
-coolest K dwarfs in our sample are extremely large, spanning values between
-0.4 and 0.75, yet the difference in mass is less than a factor of two.
-Such a large spread in AVR exponents cannot be explained by mass-dependent
-        heating alone.
-}
+% \item{
+%         The differences in the (\vb) AVR exponent between the hottest and
+% coolest K dwarfs in our sample are extremely large, spanning values between
+% 0.4 and 0.75, yet the difference in mass is less than a factor of two.
+% Such a large spread in AVR exponents cannot be explained by mass-dependent
+%         heating alone.
+% }
 
-\end{itemize}
+% \end{itemize}
 
 \racomment{Words about the significance of an inverted period-color relation.}
+
+\racomment{How does the weakened van Saders braking law fit into all this?}
+
+\racomment{Talk about the fact that the stars in each bin are not necessarily
+the same age.}
+
+\racomment{Dispersion could be dependent on the selection function.
+We cut stars at high b, because we find that these do lead to a bias.
+We find no evidence for increased velocity dispersion with decreasing teff in
+either vb or vz.
+We find that sigma clipping is necessary for vb but not vz and do not find
+that the outliers are distributed towards higher galactic latitudes.
+}
+
+% \racomment{Trevor suggest that stars forming in clusters could be the reason
+% why young stars are so dynamically cool.}
+
+% \racomment{Are there any asteroseismic stars in this sample that could help
+% pin down the age?}
