--- a/paper/discussion.tex
+++ b/paper/discussion.tex
@@ -101,4 +101,4 @@
 % This would make synchronized some stars seem younger, more likely for massive
 % stars, although really only likely at short rotation periods.
 
-\end{itemize}
+% \end{itemize}
