--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -58,6 +58,8 @@
 \newcommand{\sigmavb}{$\sigma_{v{\bf b}}$}
 \newcommand{\sigmavz}{$\sigma_{v{\bf z}}$}
 
+\newcommand{\tmin}{4000}
+
 % \newcommand{\nsim_stars}{841}
 
 \newcommand{\amnh}{1}
@@ -81,11 +83,11 @@ approach to calibrating gyrochronology}
 \author{%
     Ruth Angus \etal}
     % Angus Beane,
-    % Adrian Price-Whelan,
     % Jennifer van Saders,
     % Elisabeth Newton,
-    % Jason Curtis,
+    % Adrian Price-Whelan,
     % Travis Berger,
+    % Jason Curtis,
     % Dan Foreman-Mackey,
     % Lauren Anderson,
     % Megan Bedell,
@@ -104,15 +106,15 @@ approach to calibrating gyrochronology}
 
 % Word limit: 3500, currently 3183
 
-% Word limit: 250, currently 189
+% Word limit: 250, currently 206
 \begin{abstract}
     \include{abstract}
 \end{abstract}
 
-% Word limit: 750, currently: 1213
+% Word limit: 750, currently: 854
 \include{intro}
 
-% Word limit: 500, currently 340
+% Word limit: 500, currently 332
 \include{method}
 
 % Word limit: 500, currently 1178
