--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -4,55 +4,77 @@
 \subsection{Gyrochronology}
 It is well established that the rotation periods of FGKM dwarfs increase over
 time \citep{skumanich1972}.
-This characteristic of main-sequence stars allows them to be dated via their
-rotation periods in a practice known as gyrochronology, which is useful
-since the ages of main-sequence stars are extremely difficult to measure via
-the traditional age-dating method of isochrone placement.
-It is also well established that stars of the same age but different {\it
-masses} have different rotation periods \racomment{(citation)}, thought to be
-caused by the deeper convective zones, and therefore stronger magnetic dynamos
-(and more efficient magnetic braking) in lower-mass stars.
+This characteristic of main-sequence (MS) stars allows them to be dated via
+their rotation periods in a practice known as gyrochronology, which is useful
+since the ages of MS stars are extremely difficult to measure via the
+traditional age-dating method of isochrone placement.
+It is also well established that stars of the same age but different masses
+have different rotation periods \racomment{(citation)}, thought to be caused
+by the deeper convective zones, and therefore stronger magnetic dynamos (and
+more efficient magnetic braking) in lower-mass stars.
 However, an underlying assumption behind many empirical gyrochronology
-relations \citep[\eg][]{barnes2003, barnes2007, mamajek2008, meibom2011,
-angus2015, angus2019} is that the relationships between rotation period and
-photometric color\footnote{As the directly observable quantity, color is
-usually used as a mass-proxy, and empirical gyrochronology relations are
-usually calibrated in color, rather than mass or effective temperature.
-}, and rotation period and age are {\it separable}.
-In other words, the period-color relation is the same at all ages and the
-period-age relation is the same at all colors.
+relations is that the relationships between rotation period and photometric
+color\footnote{As the directly observable quantity, color is usually used as a
+mass-proxy, and empirical gyrochronology relations are usually calibrated in
+color, rather than mass or effective temperature.
+}, and rotation period and age are {\it separable}, meaning that the
+period-color relation is the same at all ages and the period-age relation is
+the same at all colors \citep[\eg][]{barnes2003, barnes2007, mamajek2008,
+meibom2011, angus2015, angus2019}.
 It was recently shown that old field stars rotate more rapidly than a simple,
 separable gyrochronology relation would predict \citep{angus2015,
 vansaders2016, vansaders2018, metcalfe2019}, and that a mass-dependent
 modification to the classical \citet{skumanich1972} spin-down law is required
 to reproduce the data \citep{vansaders2016, vansaders2018}.
-An even more recent analysis of middle-aged open clusters provides further
-indication that the exponent of the period-age relation is mass-dependent.
-New rotation period measurements of the 1.1 Gyr open cluster, NGC 6811,
-reveal a flattened relationship between rotation period and color
-\citep{curtis2019}.
-In this cluster, the G dwarfs rotate at the same rate as the K dwarfs.
-
-Unfortunately, the open clusters with rotation period measurements are mostly
-young -- currently the oldest is 2.5 Gyr (NGC 6819).
-Without rotation periods for precisely dated old stars, it is extremely
-difficult to calibrate the relationship between rotation period and color at
-old ages.
-For this reason, we used a population-based stellar age indicator, velocity
-dispersion, to investigate the period-color relations at old ages.
+An even more recent analysis of the 1.1 Gyr open cluster, NGC 6811, provides
+further indication that the exponent of the period-age relation is
+mass and time-dependent.
+This cluster has a flattened relationship between rotation period and color:
+the G dwarfs rotate at the same rate as the K dwarfs \citep{curtis2019}.
 % Since a separable period-age and period-color relation provided an adequate
 % fit for the young stars, it was naturally assumed to apply to old stars too.
 
+In this paper, we tested the \citet{angus2019} gyrochronology relation, which
+was calibrated using the period-color relation of Praesepe (in \gaia\ \gcolor\
+color) and the period-age relation of Praesepe and the Sun.
+The large number of Praesepe members with precise rotation periods from the
+\ktwo\ mission \citep{douglas2017, rebull2017}, spanning spectral types F
+through early M, makes it the ideal cluster for calibrating the period-color
+relation of stars at 650 Myrs.
+% This relation was calibrated by fitting a 5th-order polynomial to the relation
+% between (log) rotation period and (log) \gaia\ \gcolor\ color for around 800
+% members of the Praesepe cluster, and a straight line in (log) age to Praesepe
+% and the Sun.
+This relation accurately describes the rotation periods of F and G stars up to
+around 2.5 Gyr (the age of NGC 6819 -- the oldest cluster with available
+rotation periods), but over-predicts the rotation periods of K dwarfs in the
+1.1 Gyr NGC 6811 cluster.
+No reliable age estimates exist for K dwarfs with rotation periods older than
+1.1 Gyr, so the rotational evolution of these stars beyond this age is a
+mystery.
+% In this paper, we shed light on the rotational evolution of old K dwarfs using
+% population-based dynamical ages.
+% Unfortunately, open clusters with rotation period measurements are mostly
+% young -- currently the oldest is 2.5 Gyr (NGC 6819).
+% Without rotation periods for precisely dated old stars, it is extremely
+% difficult to calibrate the relationship between rotation period and color at
+% old ages.
+For this reason, we used a population-based stellar age indicator, velocity
+dispersion, to investigate the period-color relations at old ages.
+
 \subsection{Kinematics as an age proxy}
 
-Stars are thought to be born in the thin disk of the Milky Way, orbiting the
-center of the galaxy with a low out-of-plane, or vertical, velocity ($W$, or
-$v_z$).
+Stars are thought to be born in the thin disk of the Milky Way (MW), orbiting
+the center of the galaxy with a low out-of-plane, or vertical, velocity ($W$,
+or $v_z$).
+% because the MW's gas disk is thin and its gas moves in circular
+% orbits.
 Young stars have relatively small vertical velocities, but gain momentum in
 the vertical direction over time.
 Although the cause of orbital heating is not well understood, interactions
-with giant molecular clouds and spiral arms are thought to play an important
-role \racomment{(citations)}.
+with giant molecular clouds, spiral arms and the galactic bar are thought to
+play an important role \citep[see][for a review of secular evolution in the
+MW]{sellwood2014}.
 Although the velocity of any individual star will only provide a weak age
 constraint, the velocity dispersion of a group of stars can indicate whether,
 on average, that group is old or young relative to other groups.
@@ -75,84 +97,70 @@ dispersion can be used effectively to {\it rank} groups of stars by age.
 % same action at periapsis and apoapsis.
 % In contrast, orbital velocities are different at periapsis and apoapsis -- so
 % in this sense, {\it actions} are the natural quantities to use as age proxies.
-Vertical action is a better age indicator than vertical velocity, however both
-vertical action ($J_z$) and vertical velocity (\vz/W) can only be calculated
-with full 6-dimensional position and velocity information.
+Vertical action is a better age indicator than vertical velocity
+\citep[although still only a weak age indicator for individual
+stars,][]{beane2018}, however both vertical action ($J_z$) and vertical velocity
+(\vz/W) can only be calculated with full 6-dimensional position and velocity
+information.
 Unfortunately, most stars with measured rotation periods do not have radial
 velocity (RV) measurements because they are relatively faint \kepler\ targets
 ($\sim$11th-18th magnitudes).
-For this reason, we used an alternative age proxy: velocity in the direction
-of galactic latitude, \vb.
+For this reason, we used velocity in the direction of galactic latitude, \vb.
 The \kepler\ field is positioned at low galactic latitude (b=5-20\degrees), so
-\vb\ is a close approximation to \vz.
+\vb\ is a close (although not perfect -- see section \ref{sec:results})
+approximation to \vz.
 
 % \subsection{The degeneracy between gyrochronology and mass-dependent heating}
 
-In this paper, we tested the \citet{angus2019} gyrochronology relation, which
-was calibrated using the period-color relation of Praesepe (in \gaia\ \gcolor\
-color) and the period-age relation of Praesepe and the Sun.
-The large number of Praesepe members with precise rotation periods from the
-\ktwo\ mission \citep{douglas2017, rebull2017}, spanning spectral types F
-through early M, makes it the ideal cluster for calibrating the period-color
-relation of stars at 650 Myrs.
-% This relation was calibrated by fitting a 5th-order polynomial to the relation
-% between (log) rotation period and (log) \gaia\ \gcolor\ color for around 800
-% members of the Praesepe cluster, and a straight line in (log) age to Praesepe
-% and the Sun.
-Although only calibrated using Praesepe ($\sim$ 650 Myr) and the Sun (4.56
-Gyr), the \citet{angus2019} gyrochronology relation predicts accurate ages for
-members of NGC 6819, a 2.5 Gyr open cluster.
-However there are no rotation periods for K or M dwarfs in this cluster -- its
-coolest members with rotation periods are G dwarfs.
-The period-color relation of Praesepe is nearly identical to the period-color
-relation of the Hyades, a cluster of around the same age: $\sim$ 650 years
-\citep{douglas2016, douglas2017, rebull2017}.
-However, Praesepe and the Hyades do {\it not} have the same period-color
-relation as NGC 6811, a 1.1 Gyr cluster \citep{curtis2019}.
-The G dwarfs in NGC 6811 rotate at the same rate as the K dwarfs and it
-appears as though the K stars have `stalled' -- their spin-down has been
-halted.
-The \citet{angus2019} gyrochronology relation assumes that the rotation
-period-color relation of Praesepe is applicable to stars of all ages: the same
-polynomial relation fit to Praesepe is used to describe the period-color
-relation for all stars.
-However, the NGC 6811 cluster suggests that this assumption does not hold for
-K dwarfs past around 1 Gyr.
-If the period-color relation of the \citet{angus2019} gyrochronology model
-{\it were} a perfect model for the rotational evolution of stars, then groups
-of stars selected to be similar ages using this relation should fall on an
-isochrone on a CMD.
-% and have the same velocity dispersion across all colors.
-Unfortunately, uncertainties on \gaia\ photometry and parallaxes, plus
-variations in metallicity and extinction, blur out the main sequence enough
-that differences between stars in different age and rotation bins are not
-easily discernable on the CMD, although there is still a general age and
-rotation period gradient on the CMD, as seen in figures \ref{fig:CMD_cuts} and
-\ref{fig:age_gradient}.
-For this reason, we chose to use {\it kinematic} `isochrones', instead of
-magnitude and color-based isochrones: although kinematics as an age indicator
-is not necessarily as well calibrated to an absolute age scale as CMD
-position, it can be very sensitive to {\it differences} in the ages of stellar
-populations.
+% Although only calibrated using Praesepe ($\sim$ 650 Myr) and the Sun (4.56
+% Gyr), the \citet{angus2019} gyrochronology relation predicts accurate ages for
+% members of NGC 6819, a 2.5 Gyr open cluster.
+% However there are no rotation periods for K or M dwarfs in this cluster -- its
+% coolest members with rotation periods are G dwarfs.
+% The period-color relation of Praesepe is nearly identical to the period-color
+% relation of the Hyades, a cluster of around the same age: $\sim$ 650 years
+% \citep{douglas2016, douglas2017, rebull2017}.
+% However, Praesepe and the Hyades do {\it not} have the same period-color
+% relation as NGC 6811, a 1.1 Gyr cluster \citep{curtis2019}.
+% The G dwarfs in NGC 6811 rotate at the same rate as the K dwarfs and it
+% appears as though the K stars have `stalled' -- their spin-down has been
+% halted.
 
-Isochrones and stellar evolution tracks are highly dependent on choices made
-about input physics and assumptions.
-% and have often been calibrated using
-% different types of stars.
-As a result, different sets of models can have very different shapes on the
-CMD, particularly at low masses.
-In fact, only empirical models, not physical ones, are currently able to
-reproduce the CMD positions of M dwarfs.
-Instead of relying on CMD position to age-date groups of stars, we opted to
-explore age trends via kinematics.
-Kinematic age-dating has the advantage of being relatively model independent,
-or at least, having a very simple model: that velocity dispersion increases
-over time.
-This means that it is relatively easy to rank groups of stars by age: older
-groups have a larger velocity dispersion.
-% It is less easy to rank-order groups of stars by age on the CMD because
-% stellar evolution is highly mass and metallicity dependent, and because
-% different stellar evolution models predict different ages for the same CMD
-% position.
-% This does not mean that it is not possible to calibrate gyrochronology using
-% isochrones, however it is not the focus of this study.
+% The \citet{angus2019} gyrochronology relation assumes that the rotation
+% period-color relation of Praesepe is applicable to stars of all ages: the same
+% polynomial relation fit to Praesepe is used to describe the period-color
+% relation for all stars.
+% However, the NGC 6811 cluster suggests that this assumption does not hold for
+% K dwarfs past around 1 Gyr.
+% If the period-color relation of the \citet{angus2019} gyrochronology model
+% {\it were} a perfect model for the rotational evolution of stars, then groups
+% of stars selected to be similar ages using this relation should fall on an
+% isochrone on a CMD.
+% % and have the same velocity dispersion across all colors.
+% Unfortunately, uncertainties on \gaia\ photometry and parallaxes, plus
+% variations in metallicity and extinction, blur out the main sequence enough
+% that differences between stars in different age and rotation bins are not
+% easily discernable on the CMD, although there is still a general age and
+% rotation period gradient on the CMD, as seen in figures \ref{fig:CMD_cuts} and
+% \ref{fig:age_gradient}.
+% For this reason, we chose to use {\it kinematic} `isochrones', instead of
+% magnitude and color-based isochrones: although kinematics as an age indicator
+% is not necessarily as well calibrated to an absolute age scale as CMD
+% position, it can be very sensitive to {\it differences} in the ages of stellar
+% populations.
+
+% Isochrones and stellar evolution tracks are highly dependent on choices made
+% about input physics and assumptions.
+% % and have often been calibrated using
+% % different types of stars.
+% As a result, different sets of models can have very different shapes on the
+% CMD, particularly at low masses.
+% In fact, only empirical models, not physical ones, are currently able to
+% reproduce the CMD positions of M dwarfs.
+% Instead of relying on CMD position to age-date groups of stars, we opted to
+% explore age trends via kinematics.
+% Kinematic age-dating has the advantage of being relatively model independent,
+% or at least, having a very simple model: that velocity dispersion increases
+% over time.
+% This means that it is relatively easy to rank groups of stars by age: older
+% groups have a larger velocity dispersion.
